--- a/colabs/r/Calculating_NegBinom_Probabilities.ipynb
+++ b/colabs/r/Calculating_NegBinom_Probabilities.ipynb
@@ -31,7 +31,7 @@
         "colab_type": "text"
       },
       "source": [
-        "# Calculating Binomial Probabilities (R Version)\n",
+        "# Calculating Negative Binomial Probabilities (R Version)\n",
         "\n",
         "This notebook accompanies [this lesson](http://dlsun.github.io/probability/negative-binomial.html)."
       ]
