--- a/colabs/py/Calculating_Poisson_Probabilities.ipynb
+++ b/colabs/py/Calculating_Poisson_Probabilities.ipynb
@@ -6,7 +6,7 @@
       "name": "Calculating Poisson Probabilities",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOdTCBZLRFErPtI3V3QNrCR",
+      "authorship_tag": "ABX9TyMJfHEJ70iuMyEm8b+nKxA4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -116,6 +116,24 @@
         "(1 - Poisson(10).cdf(11),                    # approximate\n",
         " 1 - Binomial(n=10 ** 4, p=10 ** -3).cdf(11) # exact\n",
         ")"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "uf6ZKq_vXWL5",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "x = 12\n",
+        "while Poisson(10).cdf(x) < .99:\n",
+        "  x += 1\n",
+        "\n",
+        "# print out the value of x and the probability\n",
+        "x, Poisson(10).cdf(x)"
       ],
       "execution_count": null,
       "outputs": []
